catalog/couchdb/kubernetes/couchdb-discovery-service.yaml
# Ensures individual StatefulSet get their own DNS entries (e.g. couchdb-0.couchdb.namespace.svc.cluster.local)
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  labels:
    app: nosql
    component: couchdb
    role: load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  clusterIP: None
  ports:
  - name: data
    port: 5984
  - name: local
    port: 5986
  - name: epmd
    port: 4369
  - name: erlang-dist
    port: 9100
  selector:
    app: nosql
    component: couchdb
