catalog/couchdb/kubernetes/couchdb-service.minikube.yaml
# Ensures individual Pets get their own DNS entries
apiVersion: v1
kind: Service
metadata:
  name: couchdb-cluster
  labels:
    app: nosql
    component: couchdb
    role: load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  ports:
  - name: http
    port: 5984
  selector:
    app: nosql
    component: couchdb
    role: master
