catalog/couchdb/kubernetes/couchdb-service.yaml
# Ensures individual Pets get their own DNS entries
apiVersion: v1
kind: Service
metadata:
  labels:
    app: couchdb
    component: couchdb
    role: discovery
    release: stable      # canary
    environment: staging # dev, qa, production
    tier: database       # frontend, backend, cache
    partition: all       # customer_1, customer_2, developer_1, beta_release
  name: couchdb
spec:
  ports:
  - name: data
    port: 5984
  selector:
    app: couchdb
